--- a/pre-made-run.tex
+++ b/pre-made-run.tex
@@ -16,6 +16,9 @@
 %If no image is provided, the document will show an alternative (boring) cover page and not overlay anything on the headers.
 \splashpicture{SR5_Cover_Art.jpg}
 
+% lorem ipsum
+\usepackage{lipsum}
+
 \begin{document}
 %You can use this to select your Language of choice. Currently only ngerman and english are supported.
 \selectlanguage{english}
@@ -37,74 +40,124 @@ Please submit your pre-made runs according to this template as a google doc. Sen
 
 
 \section{Overview}
-\textbf{Name of Run:}\\
-\textbf{Author:}\\
-\textbf{Plot Summary:}\\
-\textbf{Setting:}\\
-\textbf{Threat Level:}\\
-\textbf{Content level:}\\
-\textbf{Theme:}\\
-\textbf{Duration: }\\
-\textbf{Rewards:}\\
-\textbf{Run Prompt:}\\
-\textbf{Meet Prompt:}\\
+\subsubsection{Author}
+/u/kajh :)
+\subsubsection{Plot Summary}
+\lipsum[1]
+\subsubsection{Setting}
+\lipsum[1]
+\subsubsection{Threat Level}
+\lipsum[1]
+\subsubsection{Content level}
+\lipsum[1]
+\subsubsection{Theme}
+\lipsum[1]
+\subsubsection{Duration}
+\lipsum[1]
+\subsubsection{Rewards}
+\lipsum[1]
+\subsubsection{Run Prompt}
+\lipsum[1]
+\subsubsection{Meet Prompt}
+\lipsum[1]
 
 \section{Cast}
-\textbf{The Johnson}\\
-\textbf{Motivations:}\\
-\textbf{Affiliation:}\\
-\textbf{Character Traits:}\\
-\textbf{Description:}
+\lipsum[1]
+\subsection{The Johnson}
+\lipsum[1]
+\subsubsection{Motivations}
+\lipsum[1]
+\subsubsection{Affiliation}
+\lipsum[1]
+\subsubsection{Character Traits}
+\lipsum[1]
+\subsubsection{Description}
+\lipsum[1]
 
 \section{Other NPCs}
-\textbf{Motivations:}\\
-\textbf{Affiliation:}\\
-\textbf{Character Traits:}\\
-\textbf{Description:}\\
+\lipsum[1]
+\subsection{Motivations}
+\lipsum[1]
+\subsubsection{Affiliation}
+\lipsum[1]
+\subsubsection{Character Traits}
+\lipsum[1]
+\subsubsection{Description}
+\lipsum[1]
 
 \section{Scenes}
-\textbf{The Meet}\\
-\textbf{Location:}\\
-\textbf{Description:}\\
-\textbf{Goals:}\\
-\textbf{Complications:}
+\lipsum[1]
+\subsection{The Meet}
+\lipsum[1]
+\subsubsection{Location}
+\lipsum[1]
+\subsubsection{Description}
+\lipsum[1]
+\subsubsection{Goals}
+\lipsum[1]
+\subsubsection{Complications}
+\lipsum[1]
 
 \subsection{Scene 1}
-\textbf{Location:}\\
-\textbf{Description:}\\
-\textbf{Goals:}\\
-\textbf{Complications:}
+\lipsum[1]
+\subsubsection{Location}
+\lipsum[1]
+\subsubsection{Description}
+\lipsum[1]
+\subsubsection{Goals}
+\lipsum[1]
+\subsubsection{Complications}
+\lipsum[1]
 
 \subsection{Scene 2}
-\textbf{Location:}\\
-\textbf{Description:}\\
-\textbf{Goals:}\\
-\textbf{Complications:}\\
+\lipsum[1]
+\subsubsection{Location}
+\lipsum[1]
+\subsubsection{Description}
+\lipsum[1]
+\subsubsection{Goals}
+\lipsum[1]
+\subsubsection{Complications}
+\lipsum[1]
 
 \subsection{Scene 3}
-\textbf{Location:}\\
-\textbf{Description:}\\
-\textbf{Goals:}\\
-\textbf{Complications:}\\
+\lipsum[1]
+\subsubsection{Location}
+\lipsum[1]
+\subsubsection{Description}
+\lipsum[1]
+\subsubsection{Goals}
+\lipsum[1]
+\subsubsection{Complications}
+\lipsum[1]
 
 \section{Legwork}
+\lipsum[1]
 \subsection{Topic 1}
-\textbf{Related Skills:}\\
-\textbf{Results}\\
+\lipsum[1]
+\subsubsection{Related Skills}
+\lipsum[1]
+\subsubsection{Results}
 \textbf{T1:}\\
 \textbf{T3:}\\
 \textbf{T6:}\\
 
 \subsection{Topic 2}
-\textbf{Related Skills:}\\
-\textbf{Results}\\
+\lipsum[1]
+\subsubsection{Related Skills}
+\lipsum[1]
+\subsubsection{Results}
+\lipsum[1]
 \textbf{T1:}\\
 \textbf{T3:}\\
 \textbf{T6:}\\
 
 \subsection{Topic 3}
-\textbf{Related Skills:}\\
-\textbf{Results}\\
+\lipsum[1]
+\subsubsection{Related Skills}
+\lipsum[1]
+\subsubsection{Results}
+\lipsum[1]
 \textbf{T1:}\\
 \textbf{T3:}\\
 \textbf{T6:}\\
@@ -133,12 +186,12 @@ colframe=storyblack,
 \begin{tabularx}{\textwidth}{>{\setlength\hsize{.3\hsize}} X >{\setlength\hsize{0.7\hsize}} X}
 \toprule
 \belowrulesepcolor{black}
-% TODO - need to clean this up.  Using spacing, which is ooookay, but should be multicolumn or tabs or something that gives perfect alignment.
+% \lipsum[1] - need to clean this up.  Using spacing, which is ooookay, but should be multicolumn or tabs or something that gives perfect alignment.
 \multicolumn{2}{l}{
-  \textbf{B \quad\; A \quad\; R \quad\; S \quad\; W \quad\; I \quad\; L \quad\; C \quad\; E \quad\; R}
+    \textbf{B\quad\; A\quad\; R\quad\; S\quad\; W\quad\; I\quad\; L\quad\; C\quad\; E\quad\; M\quad Init.}
 }\\
 \multicolumn{2}{l}{
-  \textbf{1 \quad\; 2 \quad\; 3 \quad\; 4 \quad\;\; 5 \quad\; 6 \quad\; 7 \quad\; 8 \quad\; 9 \quad\; 10}
+    \textbf{5\quad\; 8\quad\; 6\quad\; 6\quad\;\; 4\quad\; 4\quad\; 5\quad\; 4\quad\; 6\quad\; 6\quad 11+3d6}
 }\\
 \aboverulesepcolor{black}   
 \bottomrule
@@ -180,10 +233,10 @@ colframe=storyblack,
 \toprule
 \belowrulesepcolor{black}
 \multicolumn{2}{l}{
-  \textbf{B \quad\; A \quad\; R \quad\; S \quad\; W \quad\; I \quad\; L \quad\; C \quad\; E \quad\; R}
+    \textbf{B\quad\; A\quad\; R\quad\; S\quad\; W\quad\; I\quad\; L\quad\; C\quad\; E\quad\; M\quad Init.}
 }\\
 \multicolumn{2}{l}{
-  \textbf{1 \quad\; 2 \quad\; 3 \quad\; 4 \quad\;\; 5 \quad\; 6 \quad\; 7 \quad\; 8 \quad\; 9 \quad\; 10}
+    \textbf{5\quad\; 8\quad\; 6\quad\; 6\quad\;\; 4\quad\; 4\quad\; 5\quad\; 4\quad\; 6\quad\; 6\quad 11+3d6}
 }\\
 \aboverulesepcolor{black}   
 \bottomrule
