Externalised statblock to own file.

--- a/pre-made-run.tex
+++ b/pre-made-run.tex
@@ -33,7 +33,7 @@
 
 %From here on, your content can start.
 
-\input{NeonAnarchyTeXSR5Statblock.tex}
+\input{NeonAnarchyTeXSR5.tex}
 
 \chapter{Pre-made Runs}
 
