--- a/pre-made-run.tex
+++ b/pre-made-run.tex
@@ -33,8 +33,10 @@
 
 %From here on, your content can start.
 
+% import NeonAnarchy patches and updates.
 \input{NeonAnarchyTeXSR5.tex}
 
+%From here on, your _real_ content can start.
 \chapter{Pre-made Runs}
 
 Pre-made runs are ready to be GMd runs made by GMs for other GMs. They are like a D\&D module or adventure path. So detailed that a GM needs only read the run doc to GM a game without consulting anyone. The goal is to allow people to GM without having to put in the effort of designing their own runs. Each pre-made run is designed to be generic and can be run an infinite number of times without affecting a metaplot or lore of Shadowrun. GMs can make changes to the pre-made runs to add their own twists should they desire, but it's not necessary. However, please keep the title of the run the same as the original writer wrote.
@@ -46,7 +48,15 @@ Please submit your pre-made runs according to this template as a google doc. Sen
 
 \section{Overview}
 \subsubsection{Author}
-/u/kajh :)
+\textbf{/u/kajh} :)\\
+
+\begin{NAdeckercomment}{Kajh}
+Mum! A homebrew layout package for NeonAnarchy!
+\end{NAdeckercomment}
+\begin{NAdeckercomment}{Kajh's Mom}
+That's lovely, honey!  What's a layout package?
+\end{NAdeckercomment}
+
 \subsubsection{Plot Summary}
 \lipsum[1]
 \subsubsection{Setting}
@@ -198,7 +208,5 @@ Some text about this guy.
     Direction & These gangers will fight at the direction of their lieutenant, majordomo or other leader ‐ until that leader goes down or they decide it’s not worth their life. \\
 \end{statblock}
 % Statblock-end
-
-
 
 \end{document}  
